--- a/PaginaWeb.html
+++ b/PaginaWeb.html
@@ -15,5 +15,9 @@
         <li><a href="#.html">Sedes</a></li>
         <li><a href="#.html">Inicio</a></li>
      </ul>
+
+     <p>Viva experiencias gastronómicas únicas en Bogotá.<br>   
+        Disfrute de la mejor vista acompañada de la exclusividad <br>
+        única de nuestro restaurante</p>
 </body>
 </html>
