--- a/PaginaWeb.html
+++ b/PaginaWeb.html
@@ -19,5 +19,10 @@
      <p>Viva experiencias gastronómicas únicas en Bogotá.<br>   
         Disfrute de la mejor vista acompañada de la exclusividad <br>
         única de nuestro restaurante</p>
+
+        
+        <p>Viva experiencias gastronómicas únicas en Bogotá.<br>   
+            Disfrute de la mejor vista acompañada de la exclusividad <br>
+            única de nuestro restaurante</p>
 </body>
 </html>
